--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "geist": "^1.5.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
@@ -30,6 +31,7 @@
     "recharts": "^2.13.3",
     "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
@@ -48,4 +50,3 @@
     "typescript": "^5.6.3"
   }
 }
-
