--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "^9.0.1",
     "recharts": "^2.13.3",
     "remark-gfm": "^4.0.0",
