--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-typography": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
+    "@types/turndown": "^5.0.6",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +41,7 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
+    "turndown": "^7.2.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
